# Starcloud-Download

./: README.md  evaluate_dl_completeness.ipynb  example.env  main.py  pyproject.toml  refill_missing.py  requirements.txt  sc_login.py  slurm_main.py  slurm_wrapper.sh  starcloud_dl.py  start_slurm.py  validate_starcloud_dl.py
