[project]
name = "starcloud-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "pandas>=3.0.0",
    "pandas-stubs>=2.3.3.260113",
    "pycryptodome>=3.23.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "urllib3==2.6.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "seaborn>=0.13.2",
]
